<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- App -->
    <string name="app_name">Tracking Plugin</string>
    <!-- description -->
    <string name="app_desc">This plugin is used to track devices based on their signal emissions. (Bluetooth only for now.)</string>

    <!-- Tracking Tab -->
    <string name="tracking_start_scan">START SCAN</string>
    <string name="tracking_stop_scan">STOP SCAN</string>
    <!-- Debug Tab -->
    <string name="ble_scan_enabled">Stop BLE Scan</string>
    <string name="ble_scan_disabled">Start BLE Scan</string>
    <string name="classic_scan_enabled">Stop Classic Scan</string>
    <string name="classic_scan_disabled">Start Classic Scan</string>
    <string name="place_circle">Place Circle</string>
    <string name="remove_circle">Remove Circle</string>
    <!-- Devices Tab -->
    <string name="deviceTableNameHeaderText">NAME</string>
    <string name="deviceTableMacHeaderText">MAC</string>
    <string name="deviceTabAddDeviceButtonText">ADD DEVICE</string>
    <!-- Add device popup -->
    <string name="addDeviceEnterButtonText">ENTER</string>
    <string name="addDeviceCancelButtonText" tools:ignore="ButtonCase">CANCEL</string>
    <string name="addDeviceMacEntryHintText">MAC Address</string>
    <string name="addDeviceNameEntryHintText">Name</string>
    <!-- Device Info Pane -->
    <string name="deviceInfoPaneTitleLabel">Information</string>
    <string name="devInfoPaneNameLabel">NAME:</string>
    <string name="devInfoPaneMacLabel">MAC:</string>
    <string name="devInfoPaneFirstSeenLabel">FIRST SEEN:</string>
    <string name="devInfoPaneFirstSeenByLabel">BY:</string>
    <string name="devInfoPaneLastSeenLabel">LAST SEEN:</string>
    <string name="devInfoPaneLastSeenByLabel">BY:</string>
    <string name="deviceInfoPaneBackButtonDescription">Return button</string>
    <string name="deviceInfoPaneFindButtonDescription">Locate device on map button</string>
    <string name="deviceInfoPaneEditButtonDescription">Edit device attributes button</string>
    <string name="deviceInfoPaneDeleteButtonDescription">Delete device button</string>
</resources>
